# dotagent

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/agents/: manifest-validator.md  security-reviewer.md
.claude/skills/doc-review/: SKILL.md
.claude/skills/new-command/: SKILL.md
.claude/skills/new-plugin/: SKILL.md
.claude/skills/port-fish-agent/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/validate/: SKILL.md
.github/: copilot-instructions.md
.github/actions/update-formula/: action.yml
.github/workflows/: _build.yml  ci.yml  release-beta.yml  release.yml
Formula/: dotagent.rb  dotagent@beta.rb
crates/dotagent/: Cargo.toml
crates/dotagent-core/: Cargo.toml
crates/dotagent-core/src/: audit.rs  config.rs  error.rs  heartbeat.rs  lib.rs  manifest.rs  security.rs  state.rs
crates/dotagent-notify/: Cargo.toml
crates/dotagent-notify/src/: desktop.rs  imessage.rs  lib.rs  ntfy.rs  pushover.rs  slack.rs  telegram.rs
crates/dotagent-plugin/: Cargo.toml
crates/dotagent-plugin/src/: lib.rs
crates/dotagent-runner/: Cargo.toml
crates/dotagent-runner/src/: hooks.rs  lib.rs  notifiers.rs
crates/dotagent-scheduler/: Cargo.toml
crates/dotagent-scheduler/src/: lib.rs
crates/dotagent-secrets/: Cargo.toml
crates/dotagent-secrets/src/: lib.rs
crates/dotagent-state/: Cargo.toml
crates/dotagent-state/src/: audit.rs  lib.rs  manifest_cache.rs  paths.rs
crates/dotagent-supervisor/: Cargo.toml
crates/dotagent-supervisor/src/: lib.rs  reaper.rs  signal.rs
crates/dotagent-supervisor/tests/: integration.rs
crates/dotagent-telemetry/: Cargo.toml
crates/dotagent-telemetry/src/: lib.rs  retention.rs
crates/dotagent-unit-gen/: Cargo.toml
crates/dotagent-unit-gen/src/: launchd.rs  lib.rs  systemd.rs  template.rs
crates/dotagent-unit-gen/templates/: daemon.plist  daemon.service
crates/dotagent/src/: discovery.rs  main.rs
crates/dotagent/src/commands/: completions.rs  daemon.rs  daily_summary.rs  list_agents.rs  mod.rs  output.rs  status.rs  utility.rs
docs/: .gitbook.yaml  README.md  SUMMARY.md  faq.md  llms.txt
docs/concepts/: agents.md  architecture.md  notifications.md  plugins.md  secrets.md
docs/getting-started/: first-agent.md  installation.md  next-steps.md
docs/guides/: config-reference.md  daemon-lifecycle.md  migrating-from-fish.md  observability.md  troubleshooting.md
docs/plugins/: README.md  preflight-cmd.md  preflight-warp.md  sink-file.md  sink-roam.md
docs/reference/: agent-spec.md  cli.md  env-vars.md  paths.md  plugin-protocol.md
docs/security/: threat-model.md
examples/disk-alert/: README.md  agent.fish  agent.toml
examples/hello-fish/: agent.fish  agent.toml
examples/hello-go/: agent.toml  go.mod  main.go
examples/hello-python/: agent.py  agent.toml
examples/hello-rust/: Cargo.toml  agent.toml
examples/hello-rust/src/: main.rs
plugins/preflight-cmd/: Cargo.toml
plugins/preflight-cmd/src/: main.rs
plugins/preflight-warp/: Cargo.toml
plugins/preflight-warp/src/: main.rs
plugins/sink-file/: Cargo.toml
plugins/sink-file/src/: main.rs
plugins/sink-roam/: Cargo.toml
plugins/sink-roam/src/: main.rs  mcp.rs  publish.rs  sanitize.rs
scripts/homebrew/: README.md  dotagent.rb
