[workspace]
resolver = "2"
members = [
  "crates/dotagent",
  "crates/dotagent-core",
  "crates/dotagent-scheduler",
  "crates/dotagent-runner",
  "crates/dotagent-state",
  "crates/dotagent-plugin",
  "crates/dotagent-notify",
  "crates/dotagent-secrets",
  "crates/dotagent-supervisor",
  "crates/dotagent-telemetry",
  "crates/dotagent-unit-gen",
  "plugins/preflight-warp",
  "plugins/preflight-cmd",
  "plugins/sink-roam",
  "plugins/sink-file",
]
default-members = ["crates/dotagent"]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
authors = ["Avelino <avelinorun@gmail.com>"]
license = "MIT"
repository = "https://github.com/avelino/dotagent"
homepage = "https://github.com/avelino/dotagent"
readme = "README.md"

[workspace.dependencies]
# Internal crates
dotagent-core = { path = "crates/dotagent-core", version = "0.1.3" }
dotagent-scheduler = { path = "crates/dotagent-scheduler", version = "0.1.3" }
dotagent-runner = { path = "crates/dotagent-runner", version = "0.1.3" }
dotagent-state = { path = "crates/dotagent-state", version = "0.1.3" }
dotagent-plugin = { path = "crates/dotagent-plugin", version = "0.1.3" }
dotagent-notify = { path = "crates/dotagent-notify", version = "0.1.3" }
dotagent-secrets = { path = "crates/dotagent-secrets", version = "0.1.3" }
dotagent-supervisor = { path = "crates/dotagent-supervisor", version = "0.1.3" }
dotagent-telemetry = { path = "crates/dotagent-telemetry", version = "0.1.3" }
dotagent-unit-gen = { path = "crates/dotagent-unit-gen", version = "0.1.3" }

# Async runtime
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "fs",
  "io-util",
  "sync",
  "time",
  "signal",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging + telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "registry",
  "fmt",
] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "grpc-tonic",
  "trace",
  "logs",
] }
opentelemetry-semantic-conventions = "0.32"
opentelemetry-stdout = { version = "0.32", features = ["trace", "logs"] }
flate2 = "1"

# Errors
anyhow = "1"
thiserror = "2"

# HTTP (built-in notifiers + plugins)
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "webpki-roots",
  "json",
  "form",
] }

# Filesystem
dirs = "6"
fs2 = "0.4"

# Crypto
sha2 = "0.11"

# Regex
regex = "1"

# Dev
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
