[package]
name = "dotagent-notify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Built-in notification drivers for dotagent (desktop, Slack, ntfy, Pushover, Telegram, iMessage)."

[dependencies]
async-trait = "0.1"
chrono.workspace = true
dirs.workspace = true
notify-rust = "4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process"] }
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true
