[package]
name = "dotagent-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Subprocess lifecycle supervisor: bounded deadlines, kill-tree, live registry."

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
