[package]
name = "dotagent-plugin-preflight-cmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dotagent plugin: generic preflight check — runs a command, checks exit code."

[[bin]]
name = "dotagent-plugin-preflight-cmd"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
