[package]
name = "dotagent-plugin-preflight-warp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dotagent plugin: preflight check for Cloudflare WARP connection (warp-cli status)."

[[bin]]
name = "dotagent-plugin-preflight-warp"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
