[package]
name = "dotagent-plugin-sink-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dotagent plugin: persist agent output to a file path."

[[bin]]
name = "dotagent-plugin-sink-file"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
