[package]
name = "dotagent-plugin-sink-roam"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "dotagent plugin: publish agent output to Roam Research (via mcp CLI)."

[[bin]]
name = "dotagent-plugin-sink-roam"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
regex.workspace = true
dirs.workspace = true
